// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutboundAniSelectReducer SELECT_OUTBOUND_IDENTIFICATION set an outbound identifier when an outbound identifier is selected 1`] = `
Immutable.Map {
  "selectedOutboundIdentifier": "mock-value",
}
`;

exports[`OutboundAniSelectReducer SELECT_OUTBOUND_IDENTIFICATION set null when there's no outbound identifier selected 1`] = `
Immutable.Map {
  "selectedOutboundIdentifier": null,
}
`;

exports[`OutboundAniSelectReducer SET_OUTBOUND_IDENTIFICATION_LISTS if outbound identifier list are empty 1`] = `
Immutable.Map {
  "outboundIdentifierLists": Immutable.List [],
}
`;

exports[`OutboundAniSelectReducer SET_OUTBOUND_IDENTIFICATION_LISTS set outbound identifier list 1`] = `
Immutable.Map {
  "outboundIdentifierLists": Immutable.Map {
    "effective": "mock-value",
  },
}
`;

exports[`OutboundAniSelectReducer returns the initial state 1`] = `
Immutable.Map {
  "outboundIdentifierList": undefined,
  "selectedOutboundIdentifier": undefined,
}
`;
